--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta name="monetization" content="$ilp.uphold.com/L3k9E7Wr4jfJ">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <title>Addo Boakye Forison</title>
 </head>
